--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <h2 class="title">Current Sessions</h2>
         <div class="sessions">
           <div class="session-list">
-            <img src="images/dnd_poster" style="width:100px; height: 100px;"/ >
+            <img src="images/dnd_poster.png" style="width:100px; height: 100px;"/ >
             <div class="session-info">
               <h3>Dungeons and Dragons </h3>
             </div>
           <p></p>
           </div>
           <div class="session-list">
-              <img src="images/tnt_poster" style="width:100px; height: 100px;"/>
+              <img src="images/tnt_poster.png" style="width:100px; height: 100px;"/>
               <div class="session-info">
                 <h3>Towers and Tiaras</h3>
               </div>
