--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <p></p>
           </div>
           <div class="session-list">
-              <img src="images/tnt_poster.png" style="width:100px; height: 100px;"/>
+              <img src="images/tnt_poster.PNG" style="width:100px; height: 100px;"/>
               <div class="session-info">
                 <h3>Towers and Tiaras</h3>
               </div>
