--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
            <div class="description">
              <div class="header-text">
               <h1 class="header-title">Grimoire Games</h1>
-              <p>
+              <p class="header-subtitle">
                 Come play Dungeons and Dragons with us!
               </p>
              </div>
@@ -34,17 +34,29 @@
          </div>
       </section>
       <main style="padding-bottom:40px ;">
+		
+		<div class="about" id="about">
+			<div class="image-row">
+			  <img class="circular-image" src="https://i.pinimg.com/736x/63/5e/7b/635e7be730e5397be5a344e0e81d1974.jpg" 
+				   style="margin-left: auto; background-color: white; width:200px; height: 200px; border-radius:50%;"/ >
+			  <img class="circular-image" src="https://media.istockphoto.com/id/1460037207/vector/d4-d6-d8-d10-d12-and-d20-dice-for-board-games-dnd-dices-set-rpg-dice-for-table-game-vector.jpg?s=612x612&w=0&k=20&c=uKwJX7oVLPBKJhBYp-quV_AuLu50HMGYuo8tQ_CtfyU=" 
+				   style="background-color: white; width:200px; height: 200px; border-radius:50%;"/ >
+			  <img class="circular-image" src="https://png.pngtree.com/png-clipart/20230913/original/pngtree-continents-clipart-an-isometric-illustration-of-a-fantasy-world-cartoon-vector-png-image_11065272.png" 
+				   style="margin-right: auto; background-color: white; width:200px; height: 200px; border-radius:50%;"/ >
+			</div>
+		 </div>
+		
         <h2 class="title">Current Sessions</h2>
         <div class="sessions">
           <div class="session-list">
-            <img src="images/dnd_poster.png" style="width:100px; height: 100px;"/ >
+            <img src="images/dnd_poster.png" style="width:120px; height: 160px;"/ >
             <div class="session-info">
               <h3>Dungeons and Dragons </h3>
             </div>
           <p></p>
           </div>
           <div class="session-list">
-              <img src="images/tnt_poster.PNG" style="width:100px; height: 100px;"/>
+              <img src="images/tnt_poster.PNG" style="width:120px; height: 160px;"/>
               <div class="session-info">
                 <h3>Towers and Tiaras</h3>
               </div>
