--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="w3-top" class="header" id="home">
       <div class="w3-bar  w3-card w3-left-align w3-large heeder-large-screen">
         <div>
-          <p> Registration closes May 20th! <p>
+          <p style="text-align: center;"> Registration closes May 20th! <p>
         </div>
       </div>
     </div>
