--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <main style="padding-bottom:40px ;">
 		
 		<div class="about" id="about">
+			<h2 class="title"></h2>
 			<div class="image-row">
 			  <img class="circular-image" src="https://i.pinimg.com/736x/63/5e/7b/635e7be730e5397be5a344e0e81d1974.jpg" 
 				   style="margin-left: auto; background-color: white; width:200px; height: 200px; border-radius:50%;"/ >
@@ -64,6 +65,7 @@
           </div>
           
         </div>
+		
 
       <div>
 
