--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <meta charset="UTF-8">
 	<meta name="theme-color" content="#000000">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -56,6 +55,7 @@
 					<h3 class="image-text"> Explore Your Way </h3>
 				</div>
 			</div>
+			<p class="about-description"> Paragraph about stuff about what we're doing! Paragraph about stuff about what we're doing! Paragraph about stuff about what we're doing! Paragraph about stuff about what we're doing! Paragraph about stuff about what we're doing! <p>
 		 </div>
 		
         <h2 class="title">Current Sessions</h2>
@@ -64,6 +64,7 @@
             <img src="images/dnd_poster.png" style="width:120px; height: 160px;"/ >
             <div class="session-info">
               <h3>Dungeons and Dragons </h3>
+			  <button class="register-button"> Register! </button>
             </div>
           <p></p>
           </div>
@@ -71,6 +72,7 @@
               <img src="images/tnt_poster.PNG" style="width:120px; height: 160px;"/>
               <div class="session-info">
                 <h3>Towers and Tiaras</h3>
+				<button class="register-button"> Register! </button>
               </div>
             <p></p>
           </div>
