--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </div>
   </header>
       <section>
+		<div class="header-container">
          <div class="header-content">
            <div class="description">
              <div class="header-text">
@@ -32,6 +33,7 @@
               </span>
              </div>
            </div>
+		   <div class="gradient">
          </div>
       </section>
       <main style="padding-bottom:40px ;">
