--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <img src="images/dnd_poster.png" style="width:120px; height: 160px;"/ >
             <div class="session-info">
               <h3>Dungeons and Dragons </h3>
-			  <button class="register-button"> Register! </button>
+			  <button class="register-button" onclick="document.location='dnd_summer_2025.html'"> Register! </button>
             </div>
           <p></p>
           </div>
@@ -74,7 +74,7 @@
               <img src="images/tnt_poster.PNG" style="width:120px; height: 160px;"/>
               <div class="session-info">
                 <h3>Towers and Tiaras</h3>
-				<button class="register-button"> Register! </button>
+				<button class="register-button" onclick="document.location='tnt_summer_2025.html'"> Register! </button>
               </div>
             <p></p>
           </div>
