--- a/dnd_summer_2025.html
+++ b/dnd_summer_2025.html
@@ -39,9 +39,9 @@
       <main style="padding-bottom:40px ;">
 		
 		
-        <h2 class="title" style="margin-top:-10px;">Dungeons and Dragons - Summer Camp 2025</h2>
+        <h2 class="title" style="margin-top:-10px;padding-bottom:20px;">Dungeons and Dragons - Summer Camp 2025</h2>
         <div class="camp-info">
-
+			<img src="images/dnd_poster.png" style="width:30%;"/ >
           
         </div>
     
