--- a/tnt_summer_2025.html
+++ b/tnt_summer_2025.html
@@ -41,7 +41,7 @@
 		
         <h2 class="title" style="margin-top:-10px;padding-bottom:20px;">Towers and Tiaras - Summer Camp 2025</h2>
         <div class="camp-info">
-			<img src="images/tnt_poster.png" style="width:30%;"/ >
+			<img src="images/tnt_poster.PNG" style="width:30%;"/ >
           
         </div>
         
