--- a/dnd_summer_2025.html
+++ b/dnd_summer_2025.html
@@ -41,7 +41,7 @@
 		
         <h2 class="title" style="margin-top:-10px;padding-bottom:20px;">Dungeons and Dragons - Summer Camp 2025</h2>
         <div class="camp-info">
-			<img src="images/dnd_poster.png" style="width:30%;"/ >
+			<img src="images/Dungeons_and_Dragons_Camp_Poster.png" style="width:30%;"/ >
           
         </div>
     
