--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
          <div class="header-content">
            <div class="description">
              <div class="header-text">
+			  <img class="header-image" src="images/book-logo.png"/>
               <h1 class="header-title">Grimoire Games</h1>
               <p class="header-subtitle">
                 Come play Dungeons and Dragons with us!
@@ -54,7 +55,7 @@
 				<div class="image-col" style="margin-right: auto;">
 				    <img class="circular-image" src="https://png.pngtree.com/png-clipart/20230913/original/pngtree-continents-clipart-an-isometric-illustration-of-a-fantasy-world-cartoon-vector-png-image_11065272.png" 
 					     style="background-color: white; width:200px; height: 200px; border-radius:50%;"/ >
-					<h3 class="image-text"> Explore Your Way </h3>
+					<h3 class="image-text"> Explore <i>Your Way</i> </h3>
 				</div>
 			</div>
 			<p class="about-description"> Paragraph about stuff about what we're doing! Paragraph about stuff about what we're doing! Paragraph about stuff about what we're doing! Paragraph about stuff about what we're doing! Paragraph about stuff about what we're doing! <p>
@@ -63,7 +64,7 @@
         <h2 class="title">Current Sessions</h2>
         <div class="sessions">
           <div class="session-list">
-            <img src="images/dnd_poster.png" style="width:120px; height: 160px;"/ >
+            <img src="images/Dungeons_and_Dragons_Camp_Poster.png" style="width:120px; height: 160px;"/ >
             <div class="session-info">
               <h3>Dungeons and Dragons </h3>
 			  <button class="register-button" onclick="document.location='dnd_summer_2025.html'"> Register! </button>
@@ -71,7 +72,7 @@
           <p></p>
           </div>
           <div class="session-list">
-              <img src="images/tnt_poster.PNG" style="width:120px; height: 160px;"/>
+              <img src="images/Towers_and_Tiaras_Camp_Poster.PNG" style="width:120px; height: 160px;"/>
               <div class="session-info">
                 <h3>Towers and Tiaras</h3>
 				<button class="register-button" onclick="document.location='tnt_summer_2025.html'"> Register! </button>
@@ -84,17 +85,17 @@
 		
 		<h2 class="title">FAQ</h2>
 		<div class="accordion-section">
-			<button class="accordion" style="border-top-left-radius:30px;border-top-right-radius:30px">Question 1</button>
+			<button class="accordion" style="border-top-left-radius:30px;border-top-right-radius:30px">What to bring</button>
 			<div class="panel">
 			  <p>Some answer</p>
 			</div>
 
-			<button class="accordion">Question 2</button>
+			<button class="accordion">What to expect</button>
 			<div class="panel">
 			  <p>Some answer</p>
 			</div>
 
-			<button class="accordion-last" style="border-bottom-left-radius:30px;border-bottom-right-radius:30px">Question 3</button>
+			<button class="accordion-last" style="border-bottom-left-radius:30px;border-bottom-right-radius:30px">Will there be food?</button>
 			<div class="panel" style="border-bottom-left-radius:30px;border-bottom-right-radius:30px">
 			  <p>Some answer</p>
 			</div>
