--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <p></p>
           </div>
           <div class="session-list">
-              <img src="images/Towers_and_Tiaras_Camp_Poster.PNG" style="width:120px; height: 160px;"/>
+              <img src="images/Towers_and_Tiaras_Camp_Poster.png" style="width:120px; height: 160px;"/>
               <div class="session-info">
                 <h3>Towers and Tiaras</h3>
 				<button class="register-button" onclick="document.location='tnt_summer_2025.html'"> Register! </button>
