--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
         <h2 class="title">Current Sessions</h2>
         <div class="sessions">
           <div class="session-list">
-            <img src="images/Dungeons_and_Dragons_Camp_Poster.png" style="width:120px; height: 160px;"/ >
+            <img src="images/Dungeons_and_Dragons_Camp_Poster.png" style="width:120px; height: 160px; border-radius: 10px;"/ >
             <div class="session-info">
-              <h3>Dungeons and Dragons </h3>
+              <h3 onclick="document.location='dnd_summer_2025.html'">Dungeons and Dragons </h3>
 			  <button class="register-button" onclick="document.location='dnd_summer_2025.html'"> Register! </button>
             </div>
           <p></p>
           </div>
           <div class="session-list">
-              <img src="images/Towers_and_Tiaras_Camp_Poster.png" style="width:120px; height: 160px;"/>
+              <img src="images/Towers_and_Tiaras_Camp_Poster.png" style="width:120px; height: 160px; border-radius: 10px;"/>
               <div class="session-info">
-                <h3>Towers and Tiaras</h3>
+                <h3 onclick="document.location='tnt_summer_2025.html'">Towers and Tiaras</h3>
 				<button class="register-button" onclick="document.location='tnt_summer_2025.html'"> Register! </button>
               </div>
             <p></p>
