--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		
         <h2 class="title">Current Sessions</h2>
         <div class="sessions">
-          <div class="session-list">
+          <div class="session-list" onclick="document.location='dnd_summer_2025.html'">
             <img src="images/Dungeons_and_Dragons_Camp_Poster.png" style="width:120px; height: 160px; border-radius: 10px;"/ >
             <div class="session-info">
               <h3 onclick="document.location='dnd_summer_2025.html'">Dungeons and Dragons </h3>
@@ -71,7 +71,7 @@
             </div>
           <p></p>
           </div>
-          <div class="session-list">
+          <div class="session-list" onclick="document.location='tnt_summer_2025.html'">
               <img src="images/Towers_and_Tiaras_Camp_Poster.png" style="width:120px; height: 160px; border-radius: 10px;"/>
               <div class="session-info">
                 <h3 onclick="document.location='tnt_summer_2025.html'">Towers and Tiaras</h3>
