--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<div class="image-col" style="margin-right: auto;">
 				    <img class="circular-image" src="https://png.pngtree.com/png-clipart/20230913/original/pngtree-continents-clipart-an-isometric-illustration-of-a-fantasy-world-cartoon-vector-png-image_11065272.png" 
 					     style="background-color: white; width:200px; height: 200px; border-radius:50%;"/ >
-					<h3 class="image-text"> Explore <i>Your Way</i> </h3>
+					<h3 class="image-text"> Explore <i>Your </i> Way</h3>
 				</div>
 			</div>
 			<p class="about-description"> Paragraph about stuff about what we're doing! Paragraph about stuff about what we're doing! Paragraph about stuff about what we're doing! Paragraph about stuff about what we're doing! Paragraph about stuff about what we're doing! <p>
