--- a/tnt_summer_2025.html
+++ b/tnt_summer_2025.html
@@ -12,8 +12,9 @@
     <title>Grimoire Games</title>
 </head>
 <body>
+  <header>
     <div class="w3-top" class="header" id="home">
-      <div class="w3-bar  w3-card w3-left-align w3-large heeder-large-screen">
+      <div class="w3-bar  w3-card w3-left-align w3-large header-large-screen">
         <div>
           <p style="text-align: center;"> Registration closes May 20th! <p>
         </div>
@@ -25,6 +26,7 @@
          <div class="header-content">
            <div class="description">
              <div class="header-text">
+				<img class="header-image" src="images/book-logo.png"/>
               <h1 class="header-title">Grimoire Games</h1>
               <p class="header-subtitle">
                 Come play Dungeons and Dragons with us!
