--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="w3-top" class="header" id="home">
 			<div class="w3-bar  w3-card w3-left-align w3-large header-large-screen">
 				<div>
-					<p style="text-align: center;"> Registration closes May 25th! <p>
+					<p style="text-align: center; color:orange;"> Registration closes May 25th! <p>
 				</div>
 			</div>
 		</div>
