--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 	</header>
   
-    <section>
+    <section onclick="document.location='index.html'">
 		<div class="header-container">
 			<div class="header-content">
 				<div class="description">
