--- a/dnd_summer_2025.html
+++ b/dnd_summer_2025.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Grimoire Games</title>
 </head>
@@ -15,12 +18,12 @@
     <div class="w3-top" class="header" id="home">
       <div class="w3-bar  w3-card w3-left-align w3-large header-large-screen">
         <div>
-          <p style="text-align: center;"> Registration closes May 20th! <p>
+          <p style="text-align: center;color:orange;"> Registration closes May 20th! <p>
         </div>
       </div>
     </div>
   </header>
-      <section>
+      <section onclick="document.location='index.html'">
 		<div class="header-container">
          <div class="header-content">
            <div class="description">
@@ -28,8 +31,8 @@
 				<img class="header-image" src="images/book-logo.png"/>
 				<h1 class="header-title">Grimoire Games</h1>
 				<p class="header-subtitle">
-                Come play Dungeons and Dragons with us!
-              </p>
+					Come play Dungeons and Dragons with us!
+				</p>
              </div>
               </span>
              </div>
@@ -40,7 +43,7 @@
       <main style="padding-bottom:40px ;">
 		
 		
-        <h2 class="title" style="margin-top:-10px;padding-bottom:20px;">Dungeons and Dragons - Summer Camp 2025</h2>
+        <h2 class="title" style="margin-top:10px;padding-bottom:20px;">Dungeons and Dragons - Summer Camp 2025</h2>
         <div class="camp-info">
 			<img src="images/Dungeons_and_Dragons_Camp_Poster.png" style="width:30%;"/ >
           
