--- a/tnt_summer_2025.html
+++ b/tnt_summer_2025.html
@@ -41,12 +41,12 @@
 		   <div class="gradient">
          </div>
       </section>
-      <main style="padding-bottom:40px ;">
+      <main style="padding:0px 30px 40px 30px;">
 		
 		
-        <h2 class="title" style="margin-top:10px;padding-bottom:20px;">Towers and Tiaras - Summer Camp 2025</h2>
+        <h2 class="session-title" style="margin-top:10px;padding-bottom:20px;">Towers and Tiaras: Summer Camp 2025</h2>
         <div class="camp-info">
-			<img src="images/Towers_and_Tiaras_Camp_Poster.png" style="width:30%;"/ >
+			<img src="images/Towers_and_Tiaras_Camp_Poster.png" style="width:40%;"/ >
           
         </div>
         
