--- a/tnt_summer_2025.html
+++ b/tnt_summer_2025.html
@@ -31,9 +31,8 @@
              <div class="header-text">
 				<img class="header-image" src="images/book-logo.png"/>
               <h1 class="header-title">Grimoire Games</h1>
-              <p class="header-subtitle">
-                Come play Dungeons and Dragons with us!
-              </p>
+              <img class="header-banner" src="images/banner.png"/>
+			  <!--<p class="header-subtitle"> Come play Dungeons and Dragons with us! </p>-->
              </div>
               </span>
              </div>
