--- a/index.html
+++ b/index.html
@@ -60,10 +60,17 @@
 				</div>
 			</div>
 			<p class="about-description">
-				Grimoire Games Summer Camp will be a fun and encouraging space for kids to play Dungeons and Dragons! 
-				Learning how to play Dungeons and Dragons can be a daunting task for kids of any age, and this camp will make 
-				it accessible and easy for everyone! We will provide a space and the materials needed for kids to make friends 
-				and have fun, while learning problem solving skills, engaging in mental math, and practicing structured creative play. 
+				Grimoire Games Summer Camp is a fun, welcoming space where kids can dive into the imaginative world of 
+				Dungeons & Dragons! Whether they're brand new to the game or already have a few adventures under their 
+				belt, our camp makes learning and playing D&D easy and exciting for everyone. 
+				<br/><br/>
+				Each week, kids will gather for two hours of collaborative storytelling, problem-solving, and creative play. 
+				Our experienced game masters provide everything needed—including character sheets, dice, maps, and minis—so 
+				campers can focus on making friends and having fun. 
+				<br/><br/>
+				Through the magic of tabletop roleplaying, campers will build confidence, 
+				strengthen their math and reading skills, and learn how to work as a team—all while embarking on epic quests and unforgettable adventures.
+
 			<p>
 		 </div>
 		
@@ -72,16 +79,34 @@
 			<div class="session-list" onclick="document.location='dnd_summer_2025.html'">
 				<img src="images/Dungeons_and_Dragons_Camp_Poster.png" style="width:120px; height: 160px; border-radius: 10px;"/ >
 				<div class="session-info">
-					<h3 onclick="document.location='dnd_summer_2025.html'">Dungeons and Dragons </h3>
-					<button class="register-button" onclick="document.location='dnd_summer_2025.html'"> Register </button>
+					<div class="session-info-header">
+						<h3 onclick="document.location='dnd_summer_2025.html'">Dungeons and Dragons </h3>
+						<button class="register-button" onclick="document.location='dnd_summer_2025.html'"> Register </button>
+					</div>
+					<div class="session-info-text">
+						<p> <b>Dates:</b> Saturdays, June 14-28 & July 12-26 </p>
+						<span style="max-height:10px"/>
+						<p> Join us this June for a story-rich Dungeons & Dragons summer camp where adventurers of all 
+							experience levels come together to explore magical realms! Ages 8-12.
+						</p>
+					</div>
 				</div>
 			</div>
 		  
 			<div class="session-list" onclick="document.location='tnt_summer_2025.html'">
 				<img src="images/Towers_and_Tiaras_Camp_Poster.png" style="width:120px; height: 160px; border-radius: 10px;"/>
 				<div class="session-info">
-					<h3 onclick="document.location='tnt_summer_2025.html'">Towers and Tiaras</h3>
-					<button class="register-button" onclick="document.location='tnt_summer_2025.html'"> Register </button>
+					<div class="session-info-header">
+						<h3 onclick="document.location='tnt_summer_2025.html'">Towers and Tiaras</h3>
+						<button class="register-button" onclick="document.location='tnt_summer_2025.html'"> Register </button>
+					</div>
+					<div class="session-info-text">
+						<p> <b>Dates:</b> Saturdays, June 14-28 & July 12-26 </p>
+						<span style="max-height:10px"/>
+						<p> Join us this June for a Dungeons & Dragons spin off where adventurers of all 
+							experience levels will go on specially themed adventures! Ages 8-12.
+						</p>
+					</div>
 				</div>
 			</div>
         </div>
@@ -89,19 +114,64 @@
 		
 		<h2 class="title">FAQ</h2>
 		<div class="accordion-section">
-			<button class="accordion" style="border-top-left-radius:30px;border-top-right-radius:30px">What to bring</button>
+			<button class="accordion" style="border-top-left-radius:30px;border-top-right-radius:30px">
+				What is Dungeons & Dragons?
+			</button>
 			<div class="panel">
-				<p>Some answer</p>
+				<p>
+					Dungeons & Dragons (or D&D) is a tabletop roleplaying game. That means it’s played like a board game, 
+					but instead of a fixed board and pieces, most of the action takes place in our imaginations! Players 
+					create characters and work together to tell a story, making choices along the way. Will you fight the 
+					evil king or convince him to change his ways? Face the mighty dragon or sneak past it? In D&D, you decide 
+					what happens next!
+				</p>
 			</div>
 
-			<button class="accordion">What to expect</button>
+			<button class="accordion">
+				What do I need to bring to a session?
+			</button>
 			<div class="panel">
-				<p>Some answer</p>
+				<p>
+					Just a positive attitude—and maybe a snack! Wear whatever’s most comfortable. We’ll provide all the 
+					materials you need to play, including dice, character sheets, and miniatures. If you think you might 
+					get hungry, bring a light snack too.
+				</p>
+			</div>
+			
+			<button class="accordion">
+				I already have some D&D stuff. Should I bring it?
+			</button>
+			<div class="panel">
+				<p>
+					Absolutely! If you have dice, miniatures, books, costume pieces, or props that you'd like to use or share, 
+					feel free to bring them along. That said, everything you need to play will be provided.
+				</p>
+			</div>
+			
+			<button class="accordion">
+				What can I expect from a session?
+			</button>
+			<div class="panel">
+				<p>
+					Whether you’re brand new to D&D or a seasoned adventurer, you’ll be welcomed at Grimoire Games! Each session 
+					starts with a quick overview of the rules, then we jump into our very own collaborative story. Every week, your 
+					child will join a group of six fellow adventurers to solve puzzles, battle monsters, and explore a fantastical 
+					world—together.
+				</p>
 			</div>
 
-			<button class="accordion-last" style="border-bottom-left-radius:30px;border-bottom-right-radius:30px">Will there be food?</button>
+			<button class="accordion-last" style="border-bottom-left-radius:30px;border-bottom-right-radius:30px">
+				My child participated and loved it—what now?
+			</button>
 			<div class="panel" style="border-bottom-left-radius:30px;border-bottom-right-radius:30px">
-				<p>Some answer</p>
+				<p>
+					That’s awesome! There are plenty of ways to keep the adventure going. Local game stores (like The Wizard’s Chest) 
+					often host D&D events, and many kids form their own groups to play at home or online. 
+					<br/>
+					If your child wants to keep playing but isn’t sure where to start, we’re happy to help! We offer advice, starter kits, 
+					and guidance for forming a group and running their own games.
+
+				</p>
 			</div>
 		</div>
 		
