--- a/dnd_summer_2025.html
+++ b/dnd_summer_2025.html
@@ -45,7 +45,33 @@
         <h2 class="session-title" style="margin-top:10px;padding-bottom:20px;">Dungeons and Dragons: Summer Camp 2025</h2>
         <div class="camp-info">
 			<img src="images/Dungeons_and_Dragons_Camp_Poster.png" style="width:40%;"/ >
-          
+			<div class="camp-info-text">
+				<p>
+					<b>Ages:</b> 8-12
+				</p>
+				<p>
+					<b>Dates:</b> Saturdays, June 14-28 & July 12-26
+				</p>
+				<p style="margin-left: 50px;">
+					— not June 7th 
+					<br/>
+					— not July 5th
+				</p>
+				<p>
+					<b>Sessions:</b> 6 
+				</p>
+				<br/>
+				<p> 
+					Embark on a journey where imagination knows no bounds! Join us this June 
+					for a story-rich Dungeons & Dragons summer camp where adventurers of all 
+					experience levels come together to explore magical realms, forge new friendships, 
+					face thrilling challenges, discover ancient mysteries, and create epic tales of bravery and heroism!  
+					<br/><br/>
+					Whether you’re a daring knight, a clever rogue, a powerful mage—or something entirely 
+					your own—you’ll join a party of fellow storytellers to roll the dice, build worlds, and 
+					bring your character to life in unforgettable ways.
+				</p>
+			</div>
         </div>
     
       </main>
