--- a/tnt_summer_2025.html
+++ b/tnt_summer_2025.html
@@ -46,7 +46,35 @@
         <h2 class="session-title" style="margin-top:10px;padding-bottom:20px;">Towers and Tiaras: Summer Camp 2025</h2>
         <div class="camp-info">
 			<img src="images/Towers_and_Tiaras_Camp_Poster.png" style="width:40%;"/ >
-          
+			<div class="camp-info-text">
+				<p>
+					<b>Ages:</b> 8-12
+				</p>
+				<p>
+					<b>Dates:</b> Saturdays, June 14-28 & July 12-26 
+				</p>
+				<p style="margin-left: 50px;">
+					— not June 7th 
+					<br/>
+					— not July 5th
+				</p>
+				<p>
+					<b>Sessions:</b> 6 
+				</p>
+				<br/>
+				<p> 
+					Step into a world of enchanted forests, daring quests, magical creatures, 
+					and legendary heroines. Towers & Tiaras is a story-driven Dungeons & Dragons 
+					summer camp where adventurers craft characters, conquer challenges, and shape 
+					epic tales in realms where castles sparkle and courage reigns. From royal intrigues 
+					to enchanted beasts, each campaign is designed to celebrate imagination, friendship, 
+					and fearless fun.
+					<br/><br/>
+					Perfect for first-time players and seasoned heroes alike, this camp welcomes anyone 
+					who loves a little glitter with their dragons.
+
+				</p>
+			</div>
         </div>
         
       </main>
