--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					That’s awesome! There are plenty of ways to keep the adventure going. Local game stores (like The Wizard’s Chest) 
 					often host D&D events, and many kids form their own groups to play at home or online. 
 					<br/>
-					If your child wants to keep playing but isn’t sure where to start, we’re happy to help! We offer advice, starter kits, 
+					If your child wants to keep playing but isn’t sure where to start, we’re happy to help! We offer advice 
 					and guidance for forming a group and running their own games.
 
 				</p>
