--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				</div>
 			</div>
 			<p class="about-description">
-				Grimoire Games Summer Camp is a fun, welcoming space where kids can dive into the imaginative world of 
+				Grimoire Games hosts fun, welcoming spaces where kids can dive into the imaginative world of 
 				Dungeons & Dragons! Whether they're brand new to the game or already have a few adventures under their 
 				belt, our camp makes learning and playing D&D easy and exciting for everyone. 
 				<br/><br/>
