content update with payment form

--- a/dnd_summer_2025.html
+++ b/dnd_summer_2025.html
@@ -31,7 +31,6 @@
 				<img class="header-image" src="images/book-logo.png"/>
 				<h1 class="header-title">Grimoire Games</h1>
 				<img class="header-banner" src="images/banner.png"/>
-				<!--<p class="header-subtitle"> Come play Dungeons and Dragons with us! </p>-->
              </div>
               </span>
              </div>
@@ -71,6 +70,8 @@
 					your own—you’ll join a party of fellow storytellers to roll the dice, build worlds, and 
 					bring your character to life in unforgettable ways.
 				</p>
+				<br/><br/>
+				<button class="register-button" style="display:block;margin-left:auto;margin-right:auto;" onclick="document.location='camper_information_form.html'"> Register </button>
 			</div>
         </div>
     
