--- a/payment.html
+++ b/payment.html
@@ -12,6 +12,9 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+	<script 
+	  src="https://www.paypal.com/sdk/js?client-id=BAAF-y1VGPAvhvLWkuClinCozf6O3--1a5bkXVK9kQMfWigtHT8ziC1lig_XZ-gtQr3e8wrnTdTnQ3inZc&components=hosted-buttons&enable-funding=venmo&currency=USD">
+	</script>
     <title>Grimoire Games</title>
 </head>
 <body>
@@ -42,39 +45,16 @@
       <main style="padding:0px 30px 40px 30px;">
 		
 		
-        <h2 class="session-title" style="margin-top:10px;padding-bottom:20px;">Towers and Tiaras: Summer Camp 2025</h2>
+        <h2 class="session-title" style="margin-top:10px;padding-bottom:20px;">Step 2: Payment</h2>
         <div class="camp-info">
-			<img src="images/Towers_and_Tiaras_Camp_Poster.png" style="width:40%;"/ >
-			<div class="camp-info-text">
-				<p>
-					<b>Ages:</b> 8-12
-				</p>
-				<p>
-					<b>Dates:</b> Saturdays, June 14-28 & July 12-26 
-				</p>
-				<p style="margin-left: 50px;">
-					— not June 7th 
-					<br/>
-					— not July 5th
-				</p>
-				<p>
-					<b>Sessions:</b> 6 
-				</p>
-				<br/>
-				<p> 
-					Step into a world of enchanted forests, daring quests, magical creatures, 
-					and legendary heroines. Towers & Tiaras is a story-driven Dungeons & Dragons 
-					summer camp where adventurers craft characters, conquer challenges, and shape 
-					epic tales in realms where castles sparkle and courage reigns. From royal intrigues 
-					to enchanted beasts, each campaign is designed to celebrate imagination, friendship, 
-					and fearless fun.
-					<br/><br/>
-					Perfect for first-time players and seasoned heroes alike, this camp welcomes anyone 
-					who loves a little glitter with their dragons.
+			<div class="camp-info-text" style="width:300px;display:grid;margin-right:auto;margin-left:auto;">
+				<div id="paypal-container-279BP6DV7DVNN"></div>
+				<script>
+				  paypal.HostedButtons({
+					hostedButtonId: "279BP6DV7DVNN",
+				  }).render("#paypal-container-279BP6DV7DVNN")
+				</script>
 
-				</p>
-				<br/><br/>
-				<button class="register-button" onclick="document.location='camper_information_form.html'"> Register </button>
 			</div>
         </div>
         
