--- a/payment.html
+++ b/payment.html
@@ -12,7 +12,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-	<script 
+	<script
 	  src="https://www.paypal.com/sdk/js?client-id=BAAF-y1VGPAvhvLWkuClinCozf6O3--1a5bkXVK9kQMfWigtHT8ziC1lig_XZ-gtQr3e8wrnTdTnQ3inZc&components=hosted-buttons&enable-funding=venmo&currency=USD">
 	</script>
     <title>Grimoire Games</title>
@@ -36,31 +36,32 @@
               <h1 class="header-title">Grimoire Games</h1>
               <img class="header-banner" src="images/banner.png"/>
              </div>
-              </span>
              </div>
            </div>
 		   <div class="gradient">
          </div>
       </section>
       <main style="padding:0px 30px 40px 30px;">
-		
-		
-        <h2 class="session-title" style="margin-top:10px;padding-bottom:20px;">Step 2: Payment</h2>
-        <div class="camp-info">
-			<div class="camp-info-text" style="width:300px;display:grid;margin-right:auto;margin-left:auto;">
-				<div id="paypal-container-279BP6DV7DVNN"></div>
-				<script>
-				  paypal.HostedButtons({
-					hostedButtonId: "279BP6DV7DVNN",
-				  }).render("#paypal-container-279BP6DV7DVNN")
-				</script>
+
+
+    <h2 class="session-title" style="margin-top:10px;">Step 2: Payment</h2>
+    <div class="camp-info">
+			<div class="camp-info-text" style="display:grid;margin-right:auto;margin-left:auto;">
+        <h3 style="margin-bottom:20px"> <b> *Ensure you have filled out and submitted the camper information form in the previous step before proceeding to payment* </b></h3>
+        <div class="paypal-container">
+          <div id="paypal-container-279BP6DV7DVNN"></div>
+  				<script>
+  				  paypal.HostedButtons({
+  					hostedButtonId: "279BP6DV7DVNN",
+  				  }).render("#paypal-container-279BP6DV7DVNN")
+  				</script>
+        </div>
 
 			</div>
-        </div>
-        
-      </main>
+    </div>
+
+  </main>
 
 
-    
 </body>
 </html>
