--- a/session_dnd_summer_2025.html
+++ b/session_dnd_summer_2025.html
@@ -12,13 +12,9 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-	<script
-	  src="https://www.paypal.com/sdk/js?client-id=BAAF-y1VGPAvhvLWkuClinCozf6O3--1a5bkXVK9kQMfWigtHT8ziC1lig_XZ-gtQr3e8wrnTdTnQ3inZc&components=hosted-buttons&enable-funding=venmo&currency=USD">
-	</script>
     <title>Grimoire Games</title>
 </head>
 <body>
-  <header>
     <div class="w3-top" class="header" id="home">
       <div class="w3-bar  w3-card w3-left-align w3-large header-large-screen">
         <div>
@@ -33,8 +29,8 @@
            <div class="description">
              <div class="header-text">
 				<img class="header-image" src="images/book-logo.png"/>
-              <h1 class="header-title">Grimoire Games</h1>
-              <img class="header-banner" src="images/banner.png"/>
+				<h1 class="header-title">Grimoire Games</h1>
+				<img class="header-banner" src="images/banner.png"/>
              </div>
               </span>
              </div>
@@ -45,10 +41,46 @@
       <main style="padding:0px 30px 40px 30px;">
 
 
-        <h2 class="session-title" style="margin-top:10px;padding-bottom:20px;">Registration Complete!</h2>
+        <h2 class="session-title" style="margin-top:10px;padding-bottom:20px;">Dungeons and Dragons: Summer Camp 2025</h2>
         <div class="camp-info">
-			<div class="camp-info-text" style="display:grid;margin-right:auto;margin-left:auto;">
-				<p style="margin-bottom:100px;"> Look out for an email from us containing waivers and general information 1-2 weeks before the session start date! </p>
+			<img src="images/Dungeons_and_Dragons_Camp_Poster.png" style="width:40%;"/ >
+			<div class="camp-info-text">
+				<p>
+					<b>Ages:</b> 8-12
+				</p>
+        <p>
+					<b>Time:</b> 1-3PM
+				</p>
+				<p>
+					<b>Dates:</b> Saturdays, June 14-28 & July 12-26
+				</p>
+				<p style="margin-left: 50px;">
+					— not June 7th
+					<br/>
+					— not July 5th
+				</p>
+				<p>
+					<b>Sessions:</b> 6
+				</p>
+        <p>
+					<b>Cost:</b> $250
+				</p>
+        <p>
+					<b>Description:</b> Meet for 2 hours each week to participate in a group role play game.
+				</p>
+				<br/>
+				<p>
+					Embark on a journey where imagination knows no bounds! Join us this June
+					for a story-rich Dungeons & Dragons summer camp where adventurers of all
+					experience levels come together to explore magical realms, forge new friendships,
+					face thrilling challenges, discover ancient mysteries, and create epic tales of bravery and heroism!
+					<br/><br/>
+					Whether you’re a daring knight, a clever rogue, a powerful mage—or something entirely
+					your own—you’ll join a party of fellow storytellers to roll the dice, build worlds, and
+					bring your character to life in unforgettable ways.
+				</p>
+				<br/><br/>
+				<button class="register-button" style="display:block;margin-left:auto;margin-right:auto;" onclick="document.location='camper_information_form.html'"> Register </button>
 			</div>
         </div>
 
