--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<div class="session-info-text">
 						<p> <b>Dates:</b> Saturdays, June 14-28 & July 12-26 </p>
 						<span style="max-height:10px"/>
-						<p> Join us this June for a story-rich Dungeons & Dragons summer camp where adventurers of all
+						<p style="margin-top:10px"> Join us this June for a story-rich Dungeons & Dragons summer camp where adventurers of all
 							experience levels come together to explore magical realms! Ages 8-12.
 						</p>
 					</div>
@@ -106,7 +106,7 @@
 					<div class="session-info-text">
 						<p> <b>Dates:</b> Saturdays, June 14-28 & July 12-26 </p>
 						<span style="max-height:10px"/>
-						<p> Join us this June for a Dungeons & Dragons spin off where adventurers of all
+						<p style="margin-top:10px"> Join us this June for a Dungeons & Dragons spin off where adventurers of all
 							experience levels will go on specially themed adventures! Ages 8-12.
 						</p>
 					</div>
