--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<h3 class="image-text"> Make Friends </h3>
 				</div>
 				<div class="image-col">
-				    <img class="circular-image" src="https://media.istockphoto.com/id/1460037207/vector/d4-d6-d8-d10-d12-and-d20-dice-for-board-games-dnd-dices-set-rpg-dice-for-table-game-vector.jpg?s=612x612&w=0&k=20&c=uKwJX7oVLPBKJhBYp-quV_AuLu50HMGYuo8tQ_CtfyU="
+				    <img class="circular-image" src="images/dnd_dice.jpg"
 					     style="background-color: white; width:200px; height: 200px; border-radius:50%;"/ >
 					<h3 class="image-text"> Take Chances </h3>
 				</div>
