--- a/about.html
+++ b/about.html
@@ -15,7 +15,6 @@
     <title>Grimoire Games</title>
 </head>
 <body>
-  <header>
     <div class="w3-top" class="header" id="home">
       <div class="w3-bar  w3-card w3-left-align w3-large header-large-screen">
         <div class="header-text-div" style="display:contents;">
@@ -31,69 +30,22 @@
         </div>
       </div>
     </div>
-  </header>
       <section onclick="document.location='index.html'">
 		<div class="header-container">
          <div class="header-content">
            <div class="description">
              <div class="header-text">
 				<img class="header-image" src="images/book-logo.png"/>
-              <h1 class="header-title">Grimoire Games</h1>
-              <img class="header-banner" src="images/banner.png"/>
+				<h1 class="header-title">Grimoire Games</h1>
+				<img class="header-banner" src="images/banner.png"/>
              </div>
-              </span>
              </div>
            </div>
 		   <div class="gradient">
          </div>
       </section>
       <main style="padding:0px 30px 40px 30px;">
-
-
-        <h2 class="session-title" style="margin-top:10px;padding-bottom:20px;">Towers and Tiaras: Summer Camp 2025</h2>
-        <div class="camp-info">
-			<img src="images/Towers_and_Tiaras_Camp_Poster.png" style="width:40%;"/ >
-			<div class="camp-info-text">
-				<p>
-					<b>Ages:</b> 8-12
-				</p>
-        <p>
-					<b>Time:</b> 1-3PM
-				</p>
-				<p>
-					<b>Dates:</b> Saturdays, June 14-28 & July 12-26
-				</p>
-				<p style="margin-left: 50px;">
-					— not June 7th
-					<br/>
-					— not July 5th
-				</p>
-				<p>
-					<b>Sessions:</b> 6
-				</p>
-        <p>
-					<b>Cost:</b> $250
-				</p>
-        <p>
-					<b>Description:</b> Meet for 2 hours each week to participate in a group role play game.
-				</p>
-				<br/>
-				<p>
-					Step into a world of enchanted forests, daring quests, magical creatures,
-					and legendary heroines. Towers & Tiaras is a story-driven Dungeons & Dragons
-					summer camp where adventurers craft characters, conquer challenges, and shape
-					epic tales in realms where castles sparkle and courage reigns. From royal intrigues
-					to enchanted beasts, each campaign is designed to celebrate imagination, friendship,
-					and fearless fun.
-					<br/><br/>
-					Perfect for first-time players and seasoned heroes alike, this camp welcomes anyone
-					who loves a little glitter with their dragons.
-
-				</p>
-				<br/><br/>
-				<button class="register-button"  style="display:block;margin-left:auto;margin-right:auto;" onclick="document.location='camper_information_form_tnt.html'"> Register </button>
-			</div>
-        </div>
+        <h2 class="session-title" style="margin-top:10px;padding-bottom:20px;">About Us</h2>
 
       </main>
 
