--- a/camper_information_form.html
+++ b/camper_information_form.html
@@ -17,8 +17,16 @@
 <body>
     <div class="w3-top" class="header" id="home">
       <div class="w3-bar  w3-card w3-left-align w3-large header-large-screen">
-        <div>
-          <p style="text-align: center;color:orange;"> Registration closes May 20th! <p>
+        <div class="header-text-div" style="display:contents;">
+					<p style="margin-left:auto;margin-right:auto;text-align: center; color:orange;"> Registration closes May 25th! <p>
+          <div class="right" style="display:flex;margin-left:auto;">
+              <p onclick="document.location='index.html'"
+                 class="nav-bar-first" style="margin-right:10px;color:black;"> Home <p>
+              <p onclick="document.location='about.html'"
+                 class="nav-bar" style="margin-right:10px;color:black;"> About <p>
+              <p onclick="document.location='index.html#current-sessions'"
+                 class="nav-bar-last" style="margin-right:10px;color:black;"> Current Sessions <p>
+          </div>
         </div>
       </div>
     </div>
