--- a/index.html
+++ b/index.html
@@ -21,9 +21,17 @@
 	<header>
 		<div class="w3-top" class="header" id="home">
 			<div class="w3-bar  w3-card w3-left-align w3-large header-large-screen">
-				<div>
-					<p style="text-align: center; color:orange;"> Registration closes May 25th! <p>
-				</div>
+				<div class="header-text-div" style="display:contents;">
+					<p style="margin-left:auto;margin-right:auto;text-align: center; color:orange;"> Registration closes May 25th! <p>
+          <div class="right" style="display:flex;margin-left:auto;">
+              <p onclick="document.location='index.html'"
+                 class="nav-bar-first" style="margin-right:10px;color:black;"> Home | <p>
+              <p onclick="document.location='about.html'"
+                 class="nav-bar" style="margin-right:10px;color:black;"> About | <p>
+              <p onclick="document.location='index.html#current-sessions'"
+                 class="nav-bar-last" style="margin-right:10px;color:black;"> Current Sessions <p>
+          </div>
+        </div>
 			</div>
 		</div>
 	</header>
@@ -77,7 +85,7 @@
 			<p>
 		 </div>
 
-        <h2 class="title">Current Sessions</h2>
+        <h2 id="current-sessions" class="title">Current Sessions</h2>
         <div class="sessions">
 			<div class="session-list" onclick="document.location='session_dnd_summer_2025.html'">
 				<img src="images/Dungeons_and_Dragons_Camp_Poster.png" style="width:120px; height: 160px; border-radius: 10px;"/ >
