content update with nav bar

--- a/about.html
+++ b/about.html
@@ -21,9 +21,9 @@
 					<p style="margin-left:auto;margin-right:auto;text-align: center; color:orange;"> Registration closes May 25th! <p>
           <div class="right" style="display:flex;margin-left:auto;">
               <p onclick="document.location='index.html'"
-                 class="nav-bar-first" style="margin-right:10px;color:black;"> Home <p>
+                 class="nav-bar-first" style="margin-right:10px;color:black;"> Home | <p>
               <p onclick="document.location='about.html'"
-                 class="nav-bar" style="margin-right:10px;color:black;"> About <p>
+                 class="nav-bar" style="margin-right:10px;color:black;"> About | <p>
               <p onclick="document.location='index.html#current-sessions'"
                  class="nav-bar-last" style="margin-right:10px;color:black;"> Current Sessions <p>
           </div>
@@ -46,7 +46,34 @@
       </section>
       <main style="padding:0px 30px 40px 30px;">
         <h2 class="session-title" style="margin-top:10px;padding-bottom:20px;">About Us</h2>
+        <div class="about-us-section">
+          <p>
+          At Grimoire Games, we believe in the power of storytelling, imagination, and a well-rolled d20.
+          We specialize in running Dungeons & Dragons sessions designed just for kids, combining adventure
+          and creativity in a safe, engaging environment.
+          <br/><br/>
+          Our team has years of experience working with kids, both as after-school instructors and as
+          organizers of a dedicated Dungeons & Dragons summer camp. We've guided
+          young heroes through quests and know how to tailor every adventure
+          to suit their age, interests, and energy.
+          <br/><br/>
+          We're currently partnering with schools to lead after-school programs, and also host
+          standalone Dungeons & Dragons sessions.
+          <br/><br/>
+          Whether your child is brand new to the world of fantasy role-playing or a seasoned young adventurer,
+          Grimoire Games is here to help them embark on unforgettable journeys—one roll at a time.
+          </p>
+          <br/><br/>
 
+          <h4 style="text-align:center;color:red;"> Want to see us in your school? Send us an email! <h4/>
+          <div class="contact" id="contact">
+            <div class="contact-list">
+                <h5><span><i class="fa fa-envelope w3-xlarge w3-text-light-grey"></i></span>Email</h5>
+                <p style="font-size:15px;"> grimoiregamesco@gmail.com </p>
+            </div>
+          </div>
+        </div>
+        <br/><br/>
       </main>
 
 
