--- a/index.html
+++ b/index.html
@@ -193,7 +193,14 @@
 					<h5><span><i class="fa fa-envelope w3-xlarge w3-text-light-grey"></i></span>Email</h5>
 					<p> grimoiregamesco@gmail.com </p>
 			    </div>
-		</div>
+		     </div>
+
+ 		    <div class="contact" id="contact">
+ 				<div class="contact-list">
+ 					<h5><span><i class="fa fa-phone w3-xlarge w3-text-light-grey"></i></span>Phone</h5>
+ 					<p> 720-854-4488 </p>
+ 			    </div>
+ 		     </div>
 	  </div>
 
     </main>
