--- a/payment.html
+++ b/payment.html
@@ -12,7 +12,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-	<script 
+	<script
 	  src="https://www.paypal.com/sdk/js?client-id=BAAF-y1VGPAvhvLWkuClinCozf6O3--1a5bkXVK9kQMfWigtHT8ziC1lig_XZ-gtQr3e8wrnTdTnQ3inZc&components=hosted-buttons&enable-funding=venmo&currency=USD">
 	</script>
     <title>Grimoire Games</title>
@@ -25,9 +25,9 @@
 					<p style="margin-left:auto;margin-right:auto;text-align: center; color:orange;"> Registration closes May 25th! <p>
           <div class="right" style="display:flex;margin-left:auto;">
               <p onclick="document.location='index.html'"
-                 class="nav-bar-first" style="margin-right:10px;color:black;"> Home <p>
+                 class="nav-bar-first" style="margin-right:10px;color:black;"> Home | <p>
               <p onclick="document.location='about.html'"
-                 class="nav-bar" style="margin-right:10px;color:black;"> About <p>
+                 class="nav-bar" style="margin-right:10px;color:black;"> About | <p>
               <p onclick="document.location='index.html#current-sessions'"
                  class="nav-bar-last" style="margin-right:10px;color:black;"> Current Sessions <p>
           </div>
