--- a/registration_complete.html
+++ b/registration_complete.html
@@ -25,9 +25,9 @@
 					<p style="margin-left:auto;margin-right:auto;text-align: center; color:orange;"> Registration closes May 25th! <p>
           <div class="right" style="display:flex;margin-left:auto;">
               <p onclick="document.location='index.html'"
-                 class="nav-bar-first" style="margin-right:10px;color:black;"> Home <p>
+                 class="nav-bar-first" style="margin-right:10px;color:black;"> Home | <p>
               <p onclick="document.location='about.html'"
-                 class="nav-bar" style="margin-right:10px;color:black;"> About <p>
+                 class="nav-bar" style="margin-right:10px;color:black;"> About | <p>
               <p onclick="document.location='index.html#current-sessions'"
                  class="nav-bar-last" style="margin-right:10px;color:black;"> Current Sessions <p>
           </div>
