--- a/session_dnd_summer_2025.html
+++ b/session_dnd_summer_2025.html
@@ -21,9 +21,9 @@
 					<p style="margin-left:auto;margin-right:auto;text-align: center; color:orange;"> Registration closes May 25th! <p>
           <div class="right" style="display:flex;margin-left:auto;">
               <p onclick="document.location='index.html'"
-                 class="nav-bar-first" style="margin-right:10px;color:black;"> Home <p>
+                 class="nav-bar-first" style="margin-right:10px;color:black;"> Home | <p>
               <p onclick="document.location='about.html'"
-                 class="nav-bar" style="margin-right:10px;color:black;"> About <p>
+                 class="nav-bar" style="margin-right:10px;color:black;"> About | <p>
               <p onclick="document.location='index.html#current-sessions'"
                  class="nav-bar-last" style="margin-right:10px;color:black;"> Current Sessions <p>
           </div>
@@ -87,6 +87,8 @@
 					your own—you’ll join a party of fellow storytellers to roll the dice, build worlds, and
 					bring your character to life in unforgettable ways.
 				</p>
+        <br/>
+        <p><b> ** Limited signups available! Register soon! ** </b></p>
 				<br/><br/>
 				<button class="register-button" style="display:block;margin-left:auto;margin-right:auto;" onclick="document.location='camper_information_form.html'"> Register </button>
 			</div>
