--- a/session_tnt_summer_2025.html
+++ b/session_tnt_summer_2025.html
@@ -22,9 +22,9 @@
 					<p style="margin-left:auto;margin-right:auto;text-align: center; color:orange;"> Registration closes May 25th! <p>
           <div class="right" style="display:flex;margin-left:auto;">
               <p onclick="document.location='index.html'"
-                 class="nav-bar-first" style="margin-right:10px;color:black;"> Home <p>
+                 class="nav-bar-first" style="margin-right:10px;color:black;"> Home | <p>
               <p onclick="document.location='about.html'"
-                 class="nav-bar" style="margin-right:10px;color:black;"> About <p>
+                 class="nav-bar" style="margin-right:10px;color:black;"> About | <p>
               <p onclick="document.location='index.html#current-sessions'"
                  class="nav-bar-last" style="margin-right:10px;color:black;"> Current Sessions <p>
           </div>
@@ -88,8 +88,9 @@
 					<br/><br/>
 					Perfect for first-time players and seasoned heroes alike, this camp welcomes anyone
 					who loves a little glitter with their dragons.
-
 				</p>
+        <br/>
+        <p><b> ** Limited signups available! Register soon! ** </b></p>
 				<br/><br/>
 				<button class="register-button"  style="display:block;margin-left:auto;margin-right:auto;" onclick="document.location='camper_information_form_tnt.html'"> Register </button>
 			</div>
