--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Grimoire Games | D&D Summer Camps in Boulder</title>
+    <title>Grimoire Games | D&D Summer Camps in Boulder </title>
     <link rel="icon" type="image/png" href="images/book-logo.png">
-    <meta name="description" content="Check out our 2025 Dungeons and Dragons Summer programs in Boulder Colorado!">
+    <meta name="description" content="Join us this June for a story-rich Dungeons & Dragons summer camp where adventurers of all experience levels come together to explore magical realms! Ages 8-12. Boulder, Colorado.">
+    <script type="application/ld+json">
+      {
+        "@context" : "https://schema.org",
+        "@type" : "WebSite",
+        "name" : "Grimoire Games",
+        "url" : "https://grimoiregames.club/"
+      }
+    </script>
     <meta charset="UTF-8">
 	  <meta name="theme-color" content="#000000">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,15 +19,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+	  <link rel="preconnect" href="https://fonts.googleapis.com">
+   	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Grimoire Games</title>
 </head>
 <body>
 	<header>
-		<div class="w3-top" class="header" id="home">
+		<div class="top-bar header" id="home">
 			<div class="w3-bar  w3-card w3-left-align w3-large header-large-screen">
 				<div class="header-text-div" style="display:contents;">
 					<p style="margin-left:auto;margin-right:auto;text-align: center; color:orange;"> Registration closes May 25th! <p>
@@ -36,90 +43,92 @@
 		</div>
 	</header>
 
-    <section onclick="document.location='index.html'">
-		<div class="header-container">
-			<div class="header-content">
-				<div class="description">
-					<div class="header-text">
-						<img class="header-image" src="images/book-logo.png"/>
-						<h1 class="header-title">Grimoire Games</h1>
-						<img class="header-banner" src="images/banner.png"/>
-					</div>
-				</div>
-			</div>
-			<div class="gradient"/>
-    </section>
+  <section onclick="document.location='index.html'">
+  	<div class="header-container">
+  		<div class="header-content">
+  			<div class="description">
+  				<div class="header-text">
+  					<img class="header-image" src="images/book-logo.png" alt="An open book">
+  					<h1 class="header-title">Grimoire Games</h1>
+  					<img class="header-banner" src="images/banner.png" alt="Fantasy countryside at sunset.">
+  				</div>
+  			</div>
+  		</div>
+  		<div class="gradient"></div>
+    </div>
+  </section>
 
-    <main style="padding-bottom:40px ;">
+  <main style="padding-bottom: 40px;">
 		<div class="about" id="about">
 			<div class="image-row">
 				<div class="image-col" style="margin-left: auto;">
 				    <img class="circular-image" src="https://i.pinimg.com/736x/63/5e/7b/635e7be730e5397be5a344e0e81d1974.jpg"
-               alt="dungeons and dragons group"
-               style="background-color: white; width:200px; height: 200px; border-radius:50%;"/ >
-					<h3 class="image-text"> Make Friends </h3>
+               alt="Group of three fantasy adventurers posing."
+               style="background-color: white; width:200px; height: 200px; border-radius:50%;">
+					  <h3 class="image-text"> Make Friends </h3>
 				</div>
 				<div class="image-col">
 				    <img class="circular-image" src="images/dnd_dice.jpg"
-					     style="background-color: white; width:200px; height: 200px; border-radius:50%;"/ >
-					<h3 class="image-text"> Take Chances </h3>
+               alt="D20 dice with vines wrapped around it."
+               style="background-color: white; width:200px; height: 200px; border-radius:50%;">
+					  <h3 class="image-text"> Take Chances </h3>
 				</div>
 				<div class="image-col" style="margin-right: auto;">
 				    <img class="circular-image" src="https://png.pngtree.com/png-clipart/20230913/original/pngtree-continents-clipart-an-isometric-illustration-of-a-fantasy-world-cartoon-vector-png-image_11065272.png"
-					     style="background-color: white; width:200px; height: 200px; border-radius:50%;"/ >
-					<h3 class="image-text"> Explore <i>Your </i> &nbsp;Way</h3>
+               alt="Miniature landscape of a seaside fantasy town."
+               style="background-color: white; width:200px; height: 200px; border-radius:50%;">
+					  <h3 class="image-text"> Explore <i>Your </i> &nbsp;Way</h3>
 				</div>
 			</div>
 			<p class="about-description">
 				Grimoire Games hosts fun, welcoming spaces where kids can dive into the imaginative world of
 				Dungeons & Dragons! Whether they're brand new to the game or already have a few adventures under their
 				belt, our camp makes learning and playing D&D easy and exciting for everyone.
-				<br/><br/>
+				<br><br>
 				Each week, kids will gather for two hours of collaborative storytelling, problem-solving, and creative play.
 				Our experienced game masters provide everything needed—including character sheets, dice, maps, and minis—so
 				campers can focus on making friends and having fun.
-				<br/><br/>
+				<br><br>
 				Through the magic of tabletop roleplaying, campers will build confidence,
 				strengthen their math and reading skills, and learn how to work as a team—all while embarking on epic quests and unforgettable adventures.
-
 			<p>
-		 </div>
+		</div>
 
-        <h2 id="current-sessions" class="title">Current Sessions</h2>
-        <div class="sessions">
+    <h2 id="current-sessions" class="title">Current Sessions</h2>
+    <div class="sessions">
 			<div class="session-list" onclick="document.location='session_dnd_summer_2025.html'">
-				<img src="images/Dungeons_and_Dragons_Poster.png" style="width:120px; height: 160px; border-radius: 10px;"/ >
+				<img src="images/Dungeons_and_Dragons_Poster.png"
+             alt="Dungeons and Dragons 2025 summer camp poster."
+             style="width:120px; height: 160px; border-radius: 10px;">
 				<div class="session-info">
 					<div class="session-info-header">
 						<h3 onclick="document.location='session_dnd_summer_2025.html'">Dungeons and Dragons </h3>
 					</div>
 					<div class="session-info-text">
 						<p> <b>Dates:</b> Saturdays, June 14-28 & July 12-26 </p>
-						<span style="max-height:10px"/>
 						<p style="margin-top:10px"> Join us this June for a story-rich Dungeons & Dragons summer camp where adventurers of all
 							experience levels come together to explore magical realms! Ages 8-12.
 						</p>
 					</div>
 				</div>
 			</div>
-
 			<div class="session-list" onclick="document.location='session_tnt_summer_2025.html'">
-				<img src="images/Towers_and_Tiaras_Poster.png" style="width:120px; height: 160px; border-radius: 10px;"/>
+				<img src="images/Towers_and_Tiaras_Poster.png"
+             alt="Towers and Tiaras 2025 summer camp poster."
+             style="width:120px; height: 160px; border-radius: 10px;">
 				<div class="session-info">
 					<div class="session-info-header">
 						<h3 onclick="document.location='session_tnt_summer_2025.html'">Towers and Tiaras</h3>
 					</div>
 					<div class="session-info-text">
 						<p> <b>Dates:</b> Saturdays, June 14-28 & July 12-26 </p>
-						<span style="max-height:10px"/>
 						<p style="margin-top:10px"> Join us this June for a Dungeons & Dragons spin off where adventurers of all
 							experience levels will go on specially themed adventures! Ages 8-12.
 						</p>
 					</div>
 				</div>
 			</div>
-        </div>
-
+    </div>
 
 		<h2 class="title">FAQ</h2>
 		<div class="accordion-section">
@@ -176,34 +185,30 @@
 				<p>
 					That’s awesome! There are plenty of ways to keep the adventure going. Local game stores (like The Wizard’s Chest)
 					often host D&D events, and many kids form their own groups to play at home or online.
-					<br/>
+					<br>
 					If your child wants to keep playing but isn’t sure where to start, we’re happy to help! We offer advice
 					and guidance for forming a group and running their own games.
-
 				</p>
 			</div>
 		</div>
 
-
-        <div>
-
+    <div>
 		    <h2 class="title">Contact Us</h2>
-		    <div class="contact" id="contact">
-				<div class="contact-list">
-					<h5><span><i class="fa fa-envelope w3-xlarge w3-text-light-grey"></i></span>Email</h5>
-					<p> grimoiregamesco@gmail.com </p>
+		    <div class="contact">
+				  <div class="contact-list">
+					    <h5><span><i class="fa fa-envelope w3-xlarge w3-text-light-grey"></i></span>Email</h5>
+					    <p> grimoiregamesco@gmail.com </p>
 			    </div>
-		     </div>
+		    </div>
 
- 		    <div class="contact" id="contact">
- 				<div class="contact-list">
- 					<h5><span><i class="fa fa-phone w3-xlarge w3-text-light-grey"></i></span>Phone</h5>
- 					<p> 720-854-4488 </p>
+ 		    <div class="contact">
+ 				  <div class="contact-list">
+ 					    <h5><span><i class="fa fa-phone w3-xlarge w3-text-light-grey"></i></span>Phone</h5>
+ 					    <p> 720-854-4488 </p>
  			    </div>
- 		     </div>
+ 		    </div>
 	  </div>
-
-    </main>
+</main>
 
 
 <script>
