--- a/about.html
+++ b/about.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title> Grimoire Games | D&D Summer Camps in Boulder </title>
+    <link rel="icon" type="image/png" href="images/book-logo.png">
+    <meta name="description" content="Join us this June for a story-rich Dungeons & Dragons summer camp where adventurers of all experience levels come together to explore magical realms! Ages 8-12. Boulder, Colorado.">
     <meta charset="UTF-8">
-	<meta name="theme-color" content="#000000">
+	  <meta name="theme-color" content="#000000">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+	  <link rel="preconnect" href="https://fonts.googleapis.com">
+	  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Grimoire Games</title>
 </head>
 <body>
-    <div class="w3-top" class="header" id="home">
+  <header>
+    <div class="top-bar header" id="home">
       <div class="w3-bar  w3-card w3-left-align w3-large header-large-screen">
         <div class="header-text-div" style="display:contents;">
-					<p style="margin-left:auto;margin-right:auto;text-align: center; color:orange;"> Registration closes May 25th! <p>
+          <p style="margin-left:auto;margin-right:auto;text-align: center; color:orange;"> Registration closes May 25th! <p>
           <div class="right" style="display:flex;margin-left:auto;">
               <p onclick="document.location='index.html'"
                  class="nav-bar-first" style="margin-right:10px;color:black;"> Home | <p>
@@ -30,53 +33,54 @@
         </div>
       </div>
     </div>
-      <section onclick="document.location='index.html'">
+  </header>
+
+  <section onclick="document.location='index.html'">
 		<div class="header-container">
-         <div class="header-content">
+        <div class="header-content">
            <div class="description">
              <div class="header-text">
-				<img class="header-image" src="images/book-logo.png"/>
-				<h1 class="header-title">Grimoire Games</h1>
-				<img class="header-banner" src="images/banner.png"/>
-             </div>
+				         <img class="header-image" src="images/book-logo.png" alt="An open book">
+				         <h1 class="header-title">Grimoire Games</h1>
+				         <img class="header-banner" src="images/banner.png" alt="Fantasy countryside at sunset.">
              </div>
            </div>
-		   <div class="gradient">
          </div>
-      </section>
-      <main style="padding:0px 30px 40px 30px;">
-        <h2 class="session-title" style="margin-top:10px;padding-bottom:20px;">About Us</h2>
-        <div class="about-us-section">
-          <p>
-          At Grimoire Games, we believe in the power of storytelling, imagination, and a well-rolled d20.
-          We specialize in running Dungeons & Dragons sessions designed just for kids, combining adventure
-          and creativity in a safe, engaging environment.
-          <br/><br/>
-          Our team has years of experience working with kids, both as after-school instructors and as
-          organizers of a dedicated Dungeons & Dragons summer camp. We've guided
-          young heroes through quests and know how to tailor every adventure
-          to suit their age, interests, and energy.
-          <br/><br/>
-          We're currently partnering with schools to lead after-school programs, and also host
-          standalone Dungeons & Dragons sessions.
-          <br/><br/>
-          Whether your child is brand new to the world of fantasy role-playing or a seasoned young adventurer,
-          Grimoire Games is here to help them embark on unforgettable journeys—one roll at a time.
-          </p>
-          <br/><br/>
+		   <div class="gradient"></div>
+    </div>
+  </section>
 
-          <h4 style="text-align:center;color:red;"> Want to see us in your school? Send us an email! <h4/>
-          <div class="contact" id="contact">
-            <div class="contact-list">
-                <h5><span><i class="fa fa-envelope w3-xlarge w3-text-light-grey"></i></span>Email</h5>
-                <p style="font-size:15px;"> grimoiregamesco@gmail.com </p>
-            </div>
+  <main style="padding:0px 30px 40px 30px;">
+    <h2 class="session-title" style="margin-top:10px;padding-bottom:20px;">About Us</h2>
+    <div class="about-us-section">
+        <p>
+        At Grimoire Games, we believe in the power of storytelling, imagination, and a well-rolled d20.
+        We specialize in running Dungeons & Dragons sessions designed just for kids, combining adventure
+        and creativity in a safe, engaging environment.
+        <br><br>
+        Our team has years of experience working with kids, both as after-school instructors and as
+        organizers of a dedicated Dungeons & Dragons summer camp. We've guided
+        young heroes through quests and know how to tailor every adventure
+        to suit their age, interests, and energy.
+        <br><br>
+        We're currently partnering with schools to lead after-school programs, and also host
+        standalone Dungeons & Dragons sessions.
+        <br><br>
+        Whether your child is brand new to the world of fantasy role-playing or a seasoned young adventurer,
+        Grimoire Games is here to help them embark on unforgettable journeys—one roll at a time.
+        </p>
+        <br><br>
+
+        <h4 style="text-align:center;color:red;"> Want to see us in your school? Send us an email! </h4>
+        <div class="contact">
+          <div class="contact-list">
+              <h5><span><i class="fa fa-envelope w3-xlarge w3-text-light-grey"></i></span>Email</h5>
+              <p style="font-size:15px;"> grimoiregamesco@gmail.com </p>
           </div>
         </div>
-        <br/><br/>
-      </main>
-
-
+    </div>
+    <br><br>
+  </main>
 
 </body>
 </html>
