--- a/session_tnt_summer_2025.html
+++ b/session_tnt_summer_2025.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title> Grimoire Games | D&D Summer Camps in Boulder </title>
+    <link rel="icon" type="image/png" href="images/book-logo.png">
+    <meta name="description" content="Join us this June for a story-rich Dungeons & Dragons summer camp where adventurers of all experience levels come together to explore magical realms! Ages 8-12. Boulder, Colorado.">
     <meta charset="UTF-8">
-	<meta name="theme-color" content="#000000">
+	  <meta name="theme-color" content="#000000">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+	  <link rel="preconnect" href="https://fonts.googleapis.com">
+	  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Grimoire Games</title>
 </head>
 <body>
   <header>
-    <div class="w3-top" class="header" id="home">
+    <div class="top-bar header" id="home">
       <div class="w3-bar  w3-card w3-left-align w3-large header-large-screen">
         <div class="header-text-div" style="display:contents;">
 					<p style="margin-left:auto;margin-right:auto;text-align: center; color:orange;"> Registration closes May 25th! <p>
@@ -32,73 +34,70 @@
       </div>
     </div>
   </header>
-      <section onclick="document.location='index.html'">
+  <section onclick="document.location='index.html'">
 		<div class="header-container">
-         <div class="header-content">
+        <div class="header-content">
            <div class="description">
              <div class="header-text">
-				<img class="header-image" src="images/book-logo.png"/>
-              <h1 class="header-title">Grimoire Games</h1>
-              <img class="header-banner" src="images/banner.png"/>
-             </div>
-              </span>
+				         <img class="header-image" src="images/book-logo.png" alt="An open book">
+				         <h1 class="header-title">Grimoire Games</h1>
+				         <img class="header-banner" src="images/banner.png" alt="Fantasy countryside at sunset.">
              </div>
            </div>
-		   <div class="gradient">
          </div>
-      </section>
-      <main style="padding:0px 30px 40px 30px;">
+		   <div class="gradient"></div>
+    </div>
+  </section>
 
-
-        <h2 class="session-title" style="margin-top:10px;padding-bottom:20px;">Towers and Tiaras: Summer Camp 2025</h2>
-        <div class="camp-info">
-			<img src="images/Towers_and_Tiaras_Poster.png" style="width:40%;"/ >
-			<div class="camp-info-text">
-				<p>
-					<b>Ages:</b> 8-12
-				</p>
-        <p>
-					<b>Time:</b> 2:30-4:30PM
-				</p>
-				<p>
-					<b>Dates:</b> Saturdays, June 14-28 & July 12-26
-				</p>
-				<p style="margin-left: 50px;">
-					— not June 7th
-					<br/>
-					— not July 5th
-				</p>
-				<p>
-					<b>Sessions:</b> 6
-				</p>
-        <p>
-					<b>Cost:</b> $250
-				</p>
-        <p>
-					<b>Description:</b> Meet for 2 hours each week to participate in a group role play game.
-				</p>
-				<br/>
-				<p>
-					Step into a world of enchanted forests, daring quests, magical creatures,
-					and legendary heroines. Towers & Tiaras is a story-driven Dungeons & Dragons
-					summer camp where adventurers craft characters, conquer challenges, and shape
-					epic tales in realms where castles sparkle and courage reigns. From royal intrigues
-					to enchanted beasts, each campaign is designed to celebrate imagination, friendship,
-					and fearless fun.
-					<br/><br/>
-					Perfect for first-time players and seasoned heroes alike, this camp welcomes anyone
-					who loves a little glitter with their dragons.
-				</p>
-        <br/>
-        <p><b> ** Limited signups available! Register soon! ** </b></p>
-				<br/><br/>
-				<button class="register-button"  style="display:block;margin-left:auto;margin-right:auto;" onclick="document.location='camper_information_form_tnt.html'"> Register </button>
-			</div>
-        </div>
-
-      </main>
-
-
-
+  <main style="padding:0px 30px 40px 30px;">
+      <h2 class="session-title" style="margin-top:10px;padding-bottom:20px;">Towers and Tiaras: Summer Camp 2025</h2>
+      <div class="camp-info">
+	        <img src="images/Towers_and_Tiaras_Poster.png" style="width:40%;" alt="Towers and Tiaras 2025 summer camp poster.">
+    	    <div class="camp-info-text">
+        		<p><b> Ages: </b> 8-12 </p>
+            <p><b> Time: </b> 2:30-4:30PM	</p>
+            <p><b> Location: </b> Boulder Public Library - Main Branch </p>
+            <p><b>Cost:</b> $250 </p>
+            <p><b>Sessions:</b> 6 </p>
+        		<p><b> Session Dates: </b></p>
+        		<div style="margin-left: 50px;">
+              — June 14th <br>
+              — June 24th <br>
+              — June 28th <br>
+              — July 12th <br>
+              — July 19th <br>
+              — July 26th <br>
+              <p style="color: red;"> **We are not meeting 4th of July weekend </p>
+            </div>
+            <p><b>Description:</b> Meet for 2 hours each week to participate in a group role play game.</p>
+        		<br>
+          			Step into a world of enchanted forests, daring quests, magical creatures,
+          			and legendary heroines. Towers & Tiaras is a story-driven Dungeons & Dragons
+          			summer camp where adventurers craft characters, conquer challenges, and shape
+          			epic tales in realms where castles sparkle and courage reigns. From royal intrigues
+          			to enchanted beasts, each campaign is designed to celebrate imagination, friendship,
+          			and fearless fun.
+          			<br><br>
+          			Perfect for first-time players and seasoned heroes alike, this camp welcomes anyone
+          			who loves a little glitter with their dragons.
+                <br><br>
+                <ul style="padding-left:20px">
+                    <li>Sessions will be held on most Saturdays in June and July at the Boulder public library. We’ll
+                    meet in a private room.</li>
+                    <li>Over the course of six sessions, our experienced Dungeon Masters will teach the basics
+                    of Dungeons & Dragons, guide players through character creation, and lead them through a
+                    complete story.</li>
+                    <li>We’ll provide a light snack each session, along with all the materials needed to play.
+                    Campers are welcome to bring their own dice, books, or character sheets if they’d like.</li>
+                    <li>All experience levels are welcome!</li>
+                </ul>
+            <br>
+            <p><b> ** Limited signups available! Register soon! ** </b></p>
+            <p><b> ** Registration closes May 25th! ** </b></p>
+        		<br><br>
+        		<button class="register-button"  style="display:block;margin-left:auto;margin-right:auto;" onclick="document.location='camper_information_form_tnt.html'"> Register </button>
+        	</div>
+      </div>
+  </main>
 </body>
 </html>
